src/EngineObserver.h
@@ -24,7 +24,6 @@
 #include <Phonon/Global>
 #include <QHash>
 #include <QPointer>
-#include <QSet>
 
 class EngineSubject;
 class QString;
@@ -187,7 +186,7 @@ private:
     bool isMetaDataSpam( QHash<qint64, QString> newMetaData );
 
     QList<QHash<qint64, QString> > m_metaDataHistory;
-    QSet<EngineObserver*> Observers;
+    QList<EngineObserver*> Observers;
     Phonon::State m_realState; // To work around the buffering issue
 };
 
